--- a/RecruitCatBeyrerJL02/Pages/Candidates/Index.cshtml
+++ b/RecruitCatBeyrerJL02/Pages/Candidates/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>List of Candidates</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Create New Candidate</a>
 </p>
 <table class="table">
     <thead>
@@ -19,15 +19,11 @@
             <th>
                 @Html.DisplayNameFor(model => model.Candidate[0].LastName)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Candidate[0].TargetSalary)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Candidate[0].StartDate)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Candidate[0].MaximumSalary)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Candidate[0].Company)
             </th>
@@ -37,15 +33,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Candidate[0].Industry)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Candidate[0].DOB)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Candidate[0].IsVeteran)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Candidate[0].CountryOfOrigin)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Candidate[0].Email)
             </th>
@@ -64,15 +52,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TargetSalary)
-            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.StartDate)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaximumSalary)
-            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Company.Id)
             </td>
@@ -82,15 +66,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Industry.Id)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DOB)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsVeteran)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CountryOfOrigin)
-            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
