--- a/RecruitCatBeyrerJL02/Pages/Companies/Delete.cshtml
+++ b/RecruitCatBeyrerJL02/Pages/Companies/Delete.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Delete Company</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -13,10 +13,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Company.Name)
+            @Html.DisplayNameFor(model => model.Company.CompanyName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Company.Name)
+            @Html.DisplayFor(model => model.Company.CompanyName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Company.Position)
