--- a/RecruitCatBeyrerJL02/Pages/Companies/Details.cshtml
+++ b/RecruitCatBeyrerJL02/Pages/Companies/Details.cshtml
@@ -5,17 +5,17 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Company Details</h1>
 
 <div>
     <h4>Company</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Company.Name)
+            @Html.DisplayNameFor(model => model.Company.CompanyName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Company.Name)
+            @Html.DisplayFor(model => model.Company.CompanyName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Company.Position)
