--- a/RecruitCatBeyrerJL02/Pages/Companies/Edit.cshtml
+++ b/RecruitCatBeyrerJL02/Pages/Companies/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Company</h1>
 
 <h4>Company</h4>
 <hr />
@@ -14,9 +14,9 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Company.Name" class="control-label"></label>
-                <input asp-for="Company.Name" class="form-control" />
-                <span asp-validation-for="Company.Name" class="text-danger"></span>
+                <label asp-for="Company.CompanyName" class="control-label"></label>
+                <input asp-for="Company.CompanyName" class="form-control" />
+                <span asp-validation-for="Company.CompanyName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Company.Position" class="control-label"></label>
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Company.Location" class="control-label"></label>
-                <input asp-for="Company.Location" class="form-control" />
+                <textarea asp-for="Company.Location" class="form-control" ></textarea>
                 <span asp-validation-for="Company.Location" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Company.Id" />
