--- a/RecruitCatBeyrerJL02/Pages/Companies/Index.cshtml
+++ b/RecruitCatBeyrerJL02/Pages/Companies/Index.cshtml
@@ -5,44 +5,32 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>List of Companies</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Create New Company</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Company[0].Name)
+                @Html.DisplayNameFor(model => model.Company[0].CompanyName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Company[0].Position)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Company[0].MinimumSalary)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Company[0].MaximumSalary)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Company[0].StartDate)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Company[0].Location)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Company[0].Industry)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Company[0].Hiring)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Company[0].Reveune)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Company[0].FulltimeEmp)
-            </th>
+
             <th></th>
         </tr>
     </thead>
@@ -50,35 +38,23 @@
 @foreach (var item in Model.Company) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.CompanyName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Position)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MinimumSalary)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaximumSalary)
-            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.StartDate)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Location)
-            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Industry.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Hiring)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Reveune)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FulltimeEmp)
-            </td>
+
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
