--- a/RecruitCatBeyrerJL02/Pages/Industries/Delete.cshtml
+++ b/RecruitCatBeyrerJL02/Pages/Industries/Delete.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Industry</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -13,10 +13,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Industry.Name)
+            @Html.DisplayNameFor(model => model.Industry.IndustryName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Industry.Name)
+            @Html.DisplayFor(model => model.Industry.IndustryName)
         </dd>
     </dl>
     
