--- a/RecruitCatBeyrerJL02/Pages/Industries/Details.cshtml
+++ b/RecruitCatBeyrerJL02/Pages/Industries/Details.cshtml
@@ -5,17 +5,17 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Industry Details</h1>
 
 <div>
     <h4>Industry</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Industry.Name)
+            @Html.DisplayNameFor(model => model.Industry.IndustryName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Industry.Name)
+            @Html.DisplayFor(model => model.Industry.IndustryName)
         </dd>
     </dl>
 </div>
