--- a/RecruitCatBeyrerJL02/Pages/Industries/Edit.cshtml
+++ b/RecruitCatBeyrerJL02/Pages/Industries/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Industry</h1>
 
 <h4>Industry</h4>
 <hr />
@@ -14,9 +14,9 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Industry.Name" class="control-label"></label>
-                <input asp-for="Industry.Name" class="form-control" />
-                <span asp-validation-for="Industry.Name" class="text-danger"></span>
+                <label asp-for="Industry.IndustryName" class="control-label"></label>
+                <input asp-for="Industry.IndustryName" class="form-control" />
+                <span asp-validation-for="Industry.IndustryName" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Industry.Id" />
             <div class="form-group">
