--- a/RecruitCatBeyrerJL02/Pages/JobTitles/Details.cshtml
+++ b/RecruitCatBeyrerJL02/Pages/JobTitles/Details.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Job Details</h1>
 
 <div>
-    <h4>JobTitle</h4>
+    <h4>Job Title</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
