--- a/BearcatSportsBuyback/Pages/SportingGoods/Create.cshtml
+++ b/BearcatSportsBuyback/Pages/SportingGoods/Create.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create Sporting Good</h1>
 
-<h4>SportingGood</h4>
+<h4>Sporting Good</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
