--- a/BearcatSportsBuyback/Pages/SportingGoods/Delete.cshtml
+++ b/BearcatSportsBuyback/Pages/SportingGoods/Delete.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Sporting Good</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this Sporting Good?</h3>
 <div>
     <h4>SportingGood</h4>
     <hr />
