--- a/BearcatSportsBuyback/Pages/SportingGoods/Details.cshtml
+++ b/BearcatSportsBuyback/Pages/SportingGoods/Details.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Sporting Good Details</h1>
 
 <div>
-    <h4>SportingGood</h4>
+    <h4>Sporting Good</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
