--- a/BearcatSportsBuyback/Pages/SportingGoods/Edit.cshtml
+++ b/BearcatSportsBuyback/Pages/SportingGoods/Edit.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Sporting Good</h1>
 
-<h4>SportingGood</h4>
+<h4>Sporting Good</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
