--- a/BearcatSportsBuyback/Pages/Leagues/Edit.cshtml
+++ b/BearcatSportsBuyback/Pages/Leagues/Edit.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit League</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Edit League</h1>
 
 <h4>League</h4>
 <hr />
@@ -29,6 +30,7 @@
             </div>
         </form>
     </div>
+</div>
 </div>
 
 <div>
