--- a/BearcatSportsBuyback/Pages/Members/Create.cshtml
+++ b/BearcatSportsBuyback/Pages/Members/Create.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create New Member</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Create New Member</h1>
 
 <h4>Member</h4>
 <hr />
@@ -71,6 +72,7 @@
             </div>
         </form>
     </div>
+</div>
 </div>
 
 <div>
