--- a/BearcatSportsBuyback/Pages/Members/Search.cshtml
+++ b/BearcatSportsBuyback/Pages/Members/Search.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Search";
 }
 
-<h1>Search Members</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Search Members</h1>
 
 <div>
     <div>
@@ -65,3 +66,4 @@
         </div>
     }
 }
+</div>
