--- a/BearcatSportsBuyback/Pages/SportingGoods/Create.cshtml
+++ b/BearcatSportsBuyback/Pages/SportingGoods/Create.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create Sporting Good</h1>
+<div style="padding-top: 56px">
+<h1 class="godown-60 fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Create Sporting Good</h1>
 
 <h4>Sporting Good</h4>
 <hr />
@@ -41,3 +42,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+</div>
