--- a/BearcatSportsBuyback/Pages/Sports/Edit.cshtml
+++ b/BearcatSportsBuyback/Pages/Sports/Edit.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Sport</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Edit Sport</h1>
 
 <h4>Sport</h4>
 <hr />
@@ -32,4 +33,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    }
+</div>
