--- a/BearcatSportsBuyback/Pages/Index.cshtml
+++ b/BearcatSportsBuyback/Pages/Index.cshtml
@@ -4,7 +4,97 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+<header class="py-5" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">
+    <div class="container px-5">
+        <div class="row gx-5 justify-content-center">
+            <div class="col-lg-6">
+                <div class="text-center my-5">
+                    <h1 class="display-5 fw-bolder text-white mb-2">BearcatSportsBuyBack</h1>
+                    <p class="lead text-white-50 mb-4">We are your one stop destination for buying and selling all things sports!!</p>
+                    <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="Identity/Account/Register">Get Started</a>
+                        <a class="btn btn-outline-light btn-lg px-4" href="SportingGoods">Available Products</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
+
+<section class="bg-light py-5 border-bottom">
+    <div class="container px-5 my-5 px-5">
+        <div class="text-center mb-5">
+            <h2 class="fw-bolder">Customer testimonials</h2>
+            <p class="lead mb-0">Our customers love doing business at BearcatSportsBuyBack!</p>
+        </div>
+        <div class="row gx-5 justify-content-center">
+            <div class="col-lg-6">
+               
+                <div class="card mb-4">
+                    <div class="card-body p-4">
+                        <div class="d-flex">
+                            <div class="flex-shrink-0"><i class="bi bi-chat-right-quote-fill text-primary fs-1"></i></div>
+                            <div class="ms-4">
+                                <p class="mb-1">Thank you for offering the best equipment for the best prices around!</p>
+                                <div class="small text-muted">- Nick Lacey, Satisfied Customer.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+               
+                <div class="card">
+                    <div class="card-body p-4">
+                        <div class="d-flex">
+                            <div class="flex-shrink-0"><i class="bi bi-chat-right-quote-fill text-primary fs-1"></i></div>
+                            <div class="ms-4">
+                                <p class="mb-1">The whole team was a huge help with getting me set up with the items that I needed. And they offered my great prices on the spot for my used gear!</p>
+                                <div class="small text-muted">- Taylor Mcfarland, Another Satisfied Customer!</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="py-5 border-bottom" id="features">
+    <div class="album py-5">
+        <div class="container">
+            <div class="text-center"">
+                <h2>Meet Our Team</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top" src="https://media.licdn.com/dms/image/C4D03AQH4lnGckEqpOg/profile-displayphoto-shrink_800_800/0/1602529607841?e=1699488000&v=beta&t=R59WVUWqhDuPRFTg5NtFSFwiZBOBPsy53q3D5RRd1Go" />
+                        <div class="card-body">
+                            <p class="card-text">Hi, I am Jameson Zink!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top" src="https://media.licdn.com/dms/image/C5603AQFhf5K9jRFHqA/profile-displayphoto-shrink_800_800/0/1516455264790?e=1701302400&v=beta&t=4VA1OzhCtxIaQfQUN1Oqi1VVUrG-eGH1vcsZvN0NPBY" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">Hi, I am Jessie Beyrer!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top" src="https://media.licdn.com/dms/image/D4D03AQET7VBbnzcerA/profile-displayphoto-shrink_800_800/0/1630020384626?e=1701302400&v=beta&t=s109N8iZ79OpLQQmSJZCWuj84jvy0NO0Q0YpucpVFHg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">Hi, I am Neil Bechmann!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
