--- a/BearcatSportsBuyback/Pages/Leagues/Create.cshtml
+++ b/BearcatSportsBuyback/Pages/Leagues/Create.cshtml
@@ -4,8 +4,8 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create New League</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Create New League</h1>
 
 <h4>League</h4>
 <hr />
@@ -27,6 +27,7 @@
             </div>
         </form>
     </div>
+</div>
 </div>
 
 <div>
