--- a/BearcatSportsBuyback/Pages/Leagues/Delete.cshtml
+++ b/BearcatSportsBuyback/Pages/Leagues/Delete.cshtml
@@ -4,8 +4,8 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Delete League</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Delete League</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -31,4 +31,5 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
+</div>
 </div>
