--- a/BearcatSportsBuyback/Pages/Members/Edit.cshtml
+++ b/BearcatSportsBuyback/Pages/Members/Edit.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Member</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Edit Member</h1>
 
 <h4>Member</h4>
 <hr />
@@ -79,7 +80,7 @@
 <div>
     <a asp-page="./Index">Back to List</a>
 </div>
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
