--- a/BearcatSportsBuyback/Pages/Members/Index.cshtml
+++ b/BearcatSportsBuyback/Pages/Members/Index.cshtml
@@ -5,13 +5,16 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Member List</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Member List</h1>
+
 
 <p>
-    <a asp-page="Create">Create New Member</a>
+    <a class="btn btn-primary btn-md px-4 me-sm-3" asp-page="Create">Create New Member</a>
 </p>
-<table class="table">
-    <thead>
+
+<table class="table table-hover align-middle mb-0 bg-white">
+    <thead class="bg-light">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Member[0].FirstName)
@@ -94,3 +97,4 @@
 }
     </tbody>
 </table>
+</div>
