--- a/BearcatSportsBuyback/Pages/Shared/_Layout.cshtml
+++ b/BearcatSportsBuyback/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">BearcatSportsBuyback</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,16 +20,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Members/Index">Members</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Members/Index">Members</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Sports/Index">Sports</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Sports/Index">Sports</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/SportingGoods/Index">Sporting Goods</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/SportingGoods/Index">Sporting Goods</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Leagues/Index">Leagues</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Leagues/Index">Leagues</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
