--- a/BearcatSportsBuyback/Pages/SportingGoods/Edit.cshtml
+++ b/BearcatSportsBuyback/Pages/SportingGoods/Edit.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Sporting Good</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Edit Sporting Good</h1>
 
 <h4>Sporting Good</h4>
 <hr />
@@ -43,3 +44,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+</div>
