--- a/BearcatSportsBuyback/Pages/SportingGoods/Statistics.cshtml
+++ b/BearcatSportsBuyback/Pages/SportingGoods/Statistics.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Statistics";
 }
 
-<h1>Statistics</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Statistics</h1>
 
 <ul class="list-group">
     <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -21,3 +22,4 @@
         <span style="color:black" class="badge badge-primary badge-pill">@Model.TQuantity</span>
     </li>
  </ul>
+</div>
