--- a/BearcatSportsBuyback/Pages/Sports/Create.cshtml
+++ b/BearcatSportsBuyback/Pages/Sports/Create.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create Sport</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Create Sport</h1>
 
 <h4>Sport</h4>
 <hr />
@@ -32,3 +33,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+</div>
