--- a/BearcatSportsBuyback/Pages/Sports/Delete.cshtml
+++ b/BearcatSportsBuyback/Pages/Sports/Delete.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete Sport</h1>
+<div style="padding-top: 56px">
+<h1 class="fw-bolder text-white text-center" style="background-image: url(https://www.color-meanings.com/wp-content/uploads/Red-and-black-stripe-pattern.jpeg); background-size:100% 100%">Delete Sport</h1>
 
 <h3>Are you sure you want to delete this Sport? </h3>
 <div>
@@ -25,4 +26,5 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
+</div>
 </div>
