--- a/BearcatSportsBuyback/Pages/Members/Index.cshtml
+++ b/BearcatSportsBuyback/Pages/Members/Index.cshtml
@@ -12,7 +12,9 @@
 <p>
     <a class="btn btn-primary btn-md px-4 me-sm-3" asp-page="Create">Create New Member</a>
 </p>
-
+<p>
+    <a class="btn btn-secondary btn-md px-4 me-sm-3" asp-page="Search">Search</a>
+</p>
 <table class="table table-hover align-middle mb-0 bg-white">
     <thead class="bg-light">
         <tr>
