--- a/BearcatSportsBuyback/Pages/Members/Search.cshtml
+++ b/BearcatSportsBuyback/Pages/Members/Search.cshtml
@@ -13,6 +13,7 @@
         <form action="" method="get" class="form-inline">
             <input asp-for="Query" class="form-control mr-sm-2 mb-2" placeholder="Search Last Name..." />
             <button type="submit" class="btn btn-primary mb-2">Search</button>
+                <a class="btn btn-secondary mb-2" asp-page="Index">Return to Members</a>
         </form>
     </div>
 </div>
