--- a/BearcatSportsBuyback/Pages/SportingGoods/Index.cshtml
+++ b/BearcatSportsBuyback/Pages/SportingGoods/Index.cshtml
@@ -11,6 +11,9 @@
 <p>
     <a class="btn btn-primary btn-md px-4 me-sm-3" asp-page="Create">Create New Sporting Good</a>
 </p>
+<p>
+    <a class="btn btn-secondary btn-md px-4 me-sm-3" asp-page="Statistics">Statistics</a>
+</p>
 <table class="table table-hover align-middle mb-0 bg-white">
     <thead class="bg-light">
         <tr>
