--- a/BearcatSportsBuyback/Pages/SportingGoods/Statistics.cshtml
+++ b/BearcatSportsBuyback/Pages/SportingGoods/Statistics.cshtml
@@ -23,4 +23,4 @@
     </li>
  </ul>
 </div>
-<a class="btn btn-secondary mb-2" asp-page="Index">Return to Members</a>
+<a class="btn btn-secondary mb-2" asp-page="Index">Return to Sporting Goods</a>
